hphp/hack/test/typecheck/case_type/where_clauses/non_fixed_point_recursion_not_top_level.php.exp
ERROR: File "non_fixed_point_recursion_not_top_level.php", line 5, characters 11-23:
Recursion is not supported via case type where clauses. (Typing[4485])
  File "non_fixed_point_recursion_not_top_level.php", line 6, characters 35-56:
  `NonFixedPoint` appears here
