hphp/hack/test/typecheck/case_type/where_clauses/non_fixed_point_recursion_not_top_level.php
<?hh

final class Cov<+T> {}

case type NonFixedPoint<T1> =
| string where Cov<string> as Cov<NonFixedPoint<vec<T1>>>;
